@@ -1,56 +1,57 @@
-language: perl
-matrix:
-  allow_failures:
-    - perl: "5.8"
-    - env: STERILIZE_ENV=0 RELEASE_TESTING=1 AUTHOR_TESTING=1
-    - env: STERILIZE_ENV=0 DEVELOPER_DEPS=1
-  include:
-    - perl: "5.8"
-      env:  STERILIZE_ENV=0
-    - perl: "5.10"
-      env:  STERILIZE_ENV=0
-    - perl: "5.12"
-      env:  STERILIZE_ENV=0
-    - perl: "5.14"
-      env:  STERILIZE_ENV=0
-    - perl: "5.16"
-      env:  STERILIZE_ENV=0
-    - perl: "5.20"
-      env:  STERILIZE_ENV=0
-    - perl: "5.21"
-      env:  STERILIZE_ENV=0
-    - perl: "5.8"
-      env:  STERILIZE_ENV=1
-    - perl: "5.10"
-      env:  STERILIZE_ENV=1
-    - perl: "5.20"
-      env:  STERILIZE_ENV=1
-    - perl: "5.21"
-      env:  STERILIZE_ENV=1
-    - perl: "5.21"
-      env: STERILIZE_ENV=0 DEVELOPER_DEPS=1
-    - perl: "5.21"
-      env: STERILIZE_ENV=0 RELEASE_TESTING=1 AUTHOR_TESTING=1
-    - perl: "5.21"
-      env: STERILIZE_ENV=0 COVERAGE_TESTING=1
+---
+after_failure:
+  - perl ./maint-travis-ci/report_fail_ctx.pl
 before_install:
   - perlbrew list
   - time git clone --depth 10 https://github.com/kentfredric/travis-scripts.git maint-travis-ci
   - time git -C ./maint-travis-ci reset --hard master
   - time perl ./maint-travis-ci/branch_reset.pl
   - time perl ./maint-travis-ci/sterilize_env.pl
+before_script:
+  - time perl ./maint-travis-ci/before_script.pl
+branches:
+  only:
+    - master
+    - build/master
+    - releases
 install:
   - time perl ./maint-travis-ci/install_deps_early.pl
   - time perl ./maint-travis-ci/install_deps.pl
-before_script:
-  - time perl ./maint-travis-ci/before_script.pl
+language: perl
+matrix:
+  allow_failures:
+    - perl: 5.8
+    - env: STERILIZE_ENV=0 RELEASE_TESTING=1 AUTHOR_TESTING=1
+    - env: STERILIZE_ENV=0 DEVELOPER_DEPS=1
+  include:
+    - env: STERILIZE_ENV=0 COVERAGE_TESTING=1
+      perl: 5.21
+    - env: STERILIZE_ENV=1
+      perl: 5.21
+    - env: STERILIZE_ENV=0
+      perl: 5.8
+    - env: STERILIZE_ENV=0
+      perl: 5.10
+    - env: STERILIZE_ENV=0
+      perl: 5.12
+    - env: STERILIZE_ENV=0
+      perl: 5.14
+    - env: STERILIZE_ENV=0
+      perl: 5.16
+    - env: STERILIZE_ENV=0
+      perl: 5.20
+    - env: STERILIZE_ENV=0
+      perl: 5.21
+    - env: STERILIZE_ENV=1
+      perl: 5.8
+    - env: STERILIZE_ENV=1
+      perl: 5.10
+    - env: STERILIZE_ENV=1
+      perl: 5.20
+    - env: STERILIZE_ENV=0 DEVELOPER_DEPS=1
+      perl: 5.21
+    - env: STERILIZE_ENV=0 RELEASE_TESTING=1 AUTHOR_TESTING=1
+      perl: 5.21
 script:
   - time perl ./maint-travis-ci/script.pl
-after_failure:
-  - perl ./maint-travis-ci/report_fail_ctx.pl
-branches:
-  only:
-    - "master"
-    - "build/master"
-    - "releases"
-
+sudo: false
